syntax = "proto3";

package auth.v1;

option go_package = "github.com/MyyPo/grpc-chat/pb/auth/v1;authpb";

service AuthService {
    rpc SignIn (SignInRequest) returns (SignInResponse);
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message SignInRequest {
    string username = 1;
    string password = 2;    
}

message SignInResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}